Getting update method to work
